--- a/tetris_project/tetris_project.vcxproj.filters
+++ b/tetris_project/tetris_project.vcxproj.filters
@@ -18,8 +18,10 @@
     <ClCompile Include="tetris_main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="fuctions.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="sfml-system-d-2.dll" />
+    <None Include="sfml-graphics-d-2.dll" />
+    <None Include="sfml-window-d-2.dll" />
   </ItemGroup>
 </Project>
